todo:fix syncornize and refresh issue, beautify these ui, maybe add some extra feature?